# VR-STL-Viewer

./: CMakeLists.txt  README.md
VR-STL-Viewer/: CMakeLists.txt  VR-STL-Viewer.cpp  VR-STL-Viewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  sortedtriple.h  ui_mainwindow.h  utilities.h  vrviewer.cpp  vrviewer.h
blade-benchmark/: data.txt
